buildscript {
    repositories {
        jcenter()
        mavenCentral()

        maven {
            url "http://sandec.bintray.com/repo"

        }
    }

    dependencies {
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2018.1.13'
    }
}

apply plugin: 'java'
apply plugin: 'application'

compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'http://oss.sonatype.org/content/repositories/snapshots'
    }
}

dependencies {
    compile 'com.github.almasb:fxgl:dev-SNAPSHOT'
}


compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.fxml,javafx.controls'
        ]
    }
}


run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.fxml,javafx.controls'
        ]
    }
}


apply plugin: 'com.sandec.jpro'

mainClassName = 'com.almasb.fxgltest.WebApp'

jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 55555

    //jpro version (optional)
    jproVersion = "2018.1.13"
}
